# moneymitra-backend

./: .gitignore  main.py  pyproject.toml  requirements.txt
llm/: budget_model.py  chat_model.py  learning_chat_model.py  quiz_model.py  section_model.py  system_prompt.py  tax_model.py
routes/: budget_router.py  chat.py  learning_chat.py  quiz.py  section_router.py  tax.py
