[project]
name = "moneymitra-backend"
version = "0.1.0"
description = "Financial scraper and RAG backend for MoneyMitra"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain[google-genai]>=1.2.15",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.2.2",
    "playwright==1.44.0",
    "chromadb==0.5.0",
    "sentence-transformers==2.7.0",
    "numpy==1.26.4",
    "html5lib==1.1"
]
[tool.uv]
override-dependencies = [
    "greenlet>=3.1.1"
]