[project]
name = "moneymitra-backend"
version = "0.1.0"
description = "Financial scraper and RAG backend for MoneyMitra"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain[google-genai]>=1.2.15",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
    "requests==2.31.0",
    "html5lib==1.1",
    "groq>=1.2.0",
]
[tool.uv]
override-dependencies = [
    "greenlet>=3.1.1"
]
